<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        android:background="@color/white"
             tools:context=".ui.about.ContactFragment">


    <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
    />
    <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            app:layout_constraintTop_toBottomOf="@id/nameLabel"
            app:layout_constraintStart_toStartOf="@id/nameLabel"
            android:textColor="@color/black"
            android:textSize="18sp"
    />
    <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintStart_toStartOf="@id/nameLabel"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
    />
    <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber"
            app:layout_constraintStart_toStartOf="@id/nameLabel"
            android:text="@string/email"
            android:textColor="@color/black"
    />
    <TextView
            android:id="@+id/cityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintStart_toStartOf="@id/nameLabel"
            android:text="@string/oklahoma_city_ok"
            android:textColor="@color/black"
    />
    <TextView
            android:id="@+id/statementView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/nameLabel"
            app:layout_constraintTop_toBottomOf="@id/cityLabel"
            android:text="@string/personal_statement"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
    />
    <View android:layout_width="wrap_content" android:layout_height="8dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/statementView"
          />

</android.support.constraint.ConstraintLayout>