<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.HomeFragment">

    <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile"
            android:layout_marginStart="-100dp"
            android:layout_marginEnd="-100dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/my_name"
            app:layout_constraintTop_toTopOf="parent"
    />

    <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="500dp"
    />

    <View
            android:id="@+id/scrimView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/scrim_white_to_black"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@drawable/profile"
            app:layout_constraintEnd_toEndOf="@drawable/profile"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/positionLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/my_name_two_lines"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
    />
    <TextView
            android:id="@+id/positionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/position"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
    />
    <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="250dp"
    />
    <View
            android:id="@+id/contentBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            />
    <TextView
            android:id="@+id/resumeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/contentBackground"
            app:layout_constraintTop_toTopOf="@id/contentBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/resume"
            android:layout_marginTop="48dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle"
            android:padding="8dp"
            android:textSize="18sp"
    />
    <TextView
            android:id="@+id/nameLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resumeLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/my_name"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
    />
    <FrameLayout
            android:id="@+id/contentContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/nameLabel2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/contentBackground"
            app:layout_constraintEnd_toEndOf="@id/contentBackground"
    >
        <fragment
                android:id="@+id/topLevelFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.ruddell.resume.ui.TopLevelContentFragment"
                tools:layout="@layout/fragment_top_level_content"
                />
    </FrameLayout>


</android.support.constraint.ConstraintLayout>