<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.TopLevelContentFragment"
        android:visibility="invisible"
        tools:visibility="visible"
>

    <android.support.constraint.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"
    />
    <android.support.constraint.Guideline
            android:id="@+id/horizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5"
    />

    <ImageButton
          android:id="@+id/workButton"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
          android:background="@color/workBackground"
          android:contentDescription="@string/education"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="8dp"
    >
    </ImageButton>
    <ImageView
            android:id="@+id/workImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/work_icon"
            app:layout_constraintTop_toTopOf="@id/workButton"
            app:layout_constraintStart_toStartOf="@id/workButton"
            app:layout_constraintEnd_toEndOf="@id/workButton"
            app:layout_constraintBottom_toTopOf="@id/workLabel"
            android:layout_margin="16dp"
            android:contentDescription="@string/education"
    />
    <TextView
            android:id="@+id/workLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_experience"
            app:layout_constraintBottom_toBottomOf="@id/workButton"
            app:layout_constraintStart_toStartOf="@id/workButton"
            app:layout_constraintEnd_toEndOf="@id/workButton"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            style="@style/ButtonLabel"
    />
    <ImageButton
            android:id="@+id/educationButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
            android:background="@color/educationBackground"
            android:contentDescription="@string/education"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
    />
    <ImageView
            android:id="@+id/educationImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/education_icon"
            app:layout_constraintTop_toTopOf="@id/educationButton"
            app:layout_constraintStart_toStartOf="@id/educationButton"
            app:layout_constraintEnd_toEndOf="@id/educationButton"
            app:layout_constraintBottom_toTopOf="@id/educationLabel"
            android:layout_margin="16dp"
            android:contentDescription="@string/education"
    />
    <TextView
            android:id="@+id/educationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            app:layout_constraintBottom_toBottomOf="@id/educationButton"
            app:layout_constraintStart_toStartOf="@id/educationImage"
            app:layout_constraintEnd_toEndOf="@id/educationImage"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            style="@style/ButtonLabel"
    />

    <ImageButton
            android:id="@+id/skillsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideline"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/skillsBackground"
            android:contentDescription="@string/education"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
    >
    </ImageButton>
    <ImageView
            android:id="@+id/skillsImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/skills_icon"
            app:layout_constraintTop_toTopOf="@id/skillsButton"
            app:layout_constraintStart_toStartOf="@id/skillsButton"
            app:layout_constraintEnd_toEndOf="@id/skillsButton"
            app:layout_constraintBottom_toTopOf="@id/skillsLabel"
            android:layout_margin="16dp"
            android:contentDescription="@string/education"
    />
    <TextView
            android:id="@+id/skillsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            app:layout_constraintBottom_toBottomOf="@id/skillsButton"
            app:layout_constraintStart_toStartOf="@id/skillsButton"
            app:layout_constraintEnd_toEndOf="@id/skillsButton"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            style="@style/ButtonLabel"
    />
    <ImageButton
            android:id="@+id/aboutButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
            android:background="@color/aboutBackground"
            android:contentDescription="@string/education"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
    />
    <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/info_icon"
            app:layout_constraintTop_toTopOf="@id/aboutButton"
            app:layout_constraintStart_toStartOf="@id/aboutButton"
            app:layout_constraintEnd_toEndOf="@id/aboutButton"
            app:layout_constraintBottom_toTopOf="@id/aboutLabel"
            android:layout_margin="16dp"
            android:contentDescription="@string/education"
    />
    <TextView
            android:id="@+id/aboutLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            app:layout_constraintBottom_toBottomOf="@id/aboutButton"
            app:layout_constraintStart_toStartOf="@id/aboutImage"
            app:layout_constraintEnd_toEndOf="@id/aboutImage"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            style="@style/ButtonLabel"
    />
</android.support.constraint.ConstraintLayout>